fix : non-visible stripes

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
 }
 
 .stripeProgress {
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.5) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0.5) 75%, transparent 75%, transparent);
   background-size: 1rem 1rem;
   animation: stripe 1s linear infinite;
 }
